--- a/css/mainred.css
+++ b/css/mainred.css
@@ -1,3 +1,18 @@
 p {
 	color: red;
 }
+
+body {
+	background-color: #AA4139
+}
+	
+h1 {
+	text-align: center;
+	border-style: dashed;
+	border-width: 4px;
+	margin-left: 450px;
+	margin-right: 450px;
+	padding-top: 25px;
+	padding-bottom: 25px;
+	background-color: #F0F0F0;
+}
