--- a/css/mainred.css
+++ b/css/mainred.css
@@ -1,5 +1,5 @@
 p {
-	color: red;
+	color: black;
 }
 
 body {
@@ -15,4 +15,18 @@ h1 {
 	padding-top: 25px;
 	padding-bottom: 25px;
 	background-color: #F0F0F0;
+}
+
+
+#mainContent {
+	margin-left: 75px;
+	margin-right: 75px;
+	
+}
+
+.centerMe{
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	
 }
