basic responsive code

--- a/css/mainred.css
+++ b/css/mainred.css
@@ -10,16 +10,16 @@ h1 {
 	text-align: center;
 	border-style: dashed;
 	border-width: 4px;
-	margin-left: 450px;
-	margin-right: 450px;
-	padding-top: 25px;
-	padding-bottom: 25px;
+	margin-left: 15%;
+	margin-right: 15%px;
+	padding-top: 5%;
+	padding-bottom: 5%;
 	background-color: #F0F0F0;
 }
 
 img{
     border: 5px solid #000000;
-    padding: 20p;
+    padding: 20px;
     border-radius: 5px;
 }
 
@@ -72,3 +72,18 @@ nav ul li a:hover {
 	background-color: #4CAF50;
 	color: #fff;
 }
+
+@media screen and (max-width: 600px)  {
+	nav {
+		display: none;
+		
+	}
+	
+	#mainContent {
+	margin-left: 2%;
+	margin-right: 2%;
+	
+
+	}
+}
+
