--- a/css/mainred.css
+++ b/css/mainred.css
@@ -10,8 +10,8 @@ h1 {
 	text-align: center;
 	border-style: dashed;
 	border-width: 4px;
-	margin-left: 15%;
-	margin-right: 15%px;
+	margin-left: 30%;
+	margin-right: 30%;
 	padding-top: 5%;
 	padding-bottom: 5%;
 	background-color: #F0F0F0;
@@ -75,6 +75,10 @@ nav ul li a:hover {
 
 @media screen and (max-width: 600px)  {
 	
+	
+	h1{
+	padding-top: 5%;
+	}
 	
 	nav ul {
 	list-style-type: none;
